Bug 145847 - Unreasonable default relative width 1% in Table Properties in case of point units (steps in comment 10)
Summary: Unreasonable default relative width 1% in Table Properties in case of point u...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Tables Measurement-Units
  Show dependency treegraph
 
Reported: 2021-11-23 07:53 UTC by Franklin Weng
Modified: 2024-08-23 11:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (237.90 KB, image/png)
2021-11-29 12:52 UTC, Franklin Weng
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Franklin Weng 2021-11-23 07:53:17 UTC
Description:
In Writer, edit the table properties of an existing table, with Alignment not set to Automatic.  When I check the "relative" in Width, the default value is 1% which doesn't make sense in most of the cases IMO.

Steps to Reproduce:
1. Edit table properties of an existing table in Writer
2. Set Alignment to value other than Automatic
3. Check the "Relative" in the Width 

Actual Results:
Default value set to 1%

Expected Results:
Maybe 50% should make more sense, but can be other values


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.2.2 / LibreOffice Community
Build ID: 02b2acce88a210515b4a5bb2e46cbfb63fe97d56
CPU threads: 4; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: zh-TW (zh_TW.UTF-8); UI: zh-TW
Calc: threaded
Comment 1 Franklin Weng 2021-11-23 07:54:21 UTC
An UX issue IMO
Comment 2 Heiko Tietze 2021-11-29 12:28:43 UTC
Cannot confirm

1. Table > Insert (enters a 2x2 table in the document)
2. Table properties > Alignment = Left, relative = checked (results in 100%)

Version: 7.2.3.2 / LibreOffice Community
Build ID: 20(Build:2)
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
7.2.3-1
Calc: threaded
Comment 3 Franklin Weng 2021-11-29 12:52:01 UTC
(In reply to Heiko Tietze from comment #2)
> Cannot confirm
> 
> 1. Table > Insert (enters a 2x2 table in the document)
> 2. Table properties > Alignment = Left, relative = checked (results in 100%)
> 
> Version: 7.2.3.2 / LibreOffice Community
> Build ID: 20(Build:2)
> CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
> Locale: de-DE (en_US.UTF-8); UI: en-US
> 7.2.3-1
> Calc: threaded

Follow your step I got 1%, screenshot attached later
Comment 4 Franklin Weng 2021-11-29 12:52:39 UTC
Created attachment 176568 [details]
screenshot

When clicking "Relative" it immediately became 1%
Comment 5 Heiko Tietze 2021-11-29 13:16:18 UTC
(In reply to Franklin Weng from comment #4)
> When clicking "Relative" it immediately became 1%

Can you share a document before switching to relative?
Comment 6 Franklin Weng 2021-11-29 13:38:09 UTC
(In reply to Heiko Tietze from comment #5)
> (In reply to Franklin Weng from comment #4)
> > When clicking "Relative" it immediately became 1%
> 
> Can you share a document before switching to relative?

Just create a simple doc with an empty table would do.

But I just tried it in safe mode it couldn't be reproduced, maybe caused by user profile?  

Some users had the same experiences.
https://ask.libreoffice.org/t/writer/70732
Comment 7 Heiko Tietze 2021-11-29 16:54:34 UTC
(In reply to Franklin Weng from comment #6)
> But I just tried it in safe mode it couldn't be reproduced, maybe caused by
> user profile?  

That's why I asked for a test document. It works well for me.
Comment 8 Heiko Tietze 2022-01-31 13:33:40 UTC
Needinfo for several month now, test document missing.
Comment 10 Heiko Tietze 2023-01-06 09:02:53 UTC
Confirming the bug.

1. Insert a table
2. Check table properties (alignment = left, relative = on) => 100%
3. Change the unit in tools > options > writer > general to point
4. Check table properties => 10%
Switching to absolut makes it 438,5pt for A4, switching back to relative turns into 1% and okay results in a zero size table.

Version: 7.4.3.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
7.4.3-4
Calc: threaded
Comment 11 stragu 2023-01-06 11:53:56 UTC
Also confirmed with comment 10 steps in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec2f1d73936c9d8cee83c0887170e9ecb8f044ba
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and:

Version: 6.2.0.0.beta1
Build ID: d1b41307be3f8c19fe6f1938cf056e7ff1eb1d18
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

Can't reproduce in:

OpenOffice.org 3.3.0
OOO330m20 (Build:9567)

So it's a regression.
Comment 12 Buovjaga 2024-08-09 15:16:24 UTC
(In reply to Heiko Tietze from comment #10)
> Confirming the bug.
> 
> 1. Insert a table
> 2. Check table properties (alignment = left, relative = on) => 100%
> 3. Change the unit in tools > options > writer > general to point
> 4. Check table properties => 10%
> Switching to absolut makes it 438,5pt for A4, switching back to relative
> turns into 1% and okay results in a zero size table.

Bibisected with linux-64-6.2 to 56e813e810c42fd7885521698a0e4dfaf5862038
weld SwFormatTablePage
Comment 13 Commit Notification 2024-08-11 15:44:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f07b271a21f157550f31b4081ba296688305cb3e

Resolves: tdf#145847 points only uses one decimal place

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2024-08-23 11:13:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c59518656a7f96bf4fb79332d1160765a84f9153

Resolves: tdf#145847 points only uses one decimal place

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.