Resolves: tdf#145847 points only uses one decimal place

while the other use two, and the assumption built in here seems
to be that there will always be two decimal places

Change-Id: I5718f220c521243b54eba8e19a86f4e86263b69e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171726
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit f07b271a21f157550f31b4081ba296688305cb3e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172082
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>